--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- App Styles -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
 
     <!-- Angular Material requires Angular.js Libraries -->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
@@ -21,9 +21,10 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
 
     <!-- Code Behind -->
-    <script src="script.js"></script>
-    <script src="customList.directive.js"></script>
-    <script src="storageService.js"></script>
+    <script src="app/todoApp.module.js"></script>
+    <script src="app/todoApp.controller.js"></script>
+    <script src="app/storage.service.js"></script>    
+    <script src="app/components/customList.directive.js"></script>
 
 </head>
 
@@ -59,6 +60,7 @@
             </md-content>
 
         </div>
+    </div>
 </body>
 
 </html>
