- Added show task and show note functions - Fixed edit task panel - Added multiple notes edit function

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
              <!-- lista delle categorie-->
 
                     <!-- direttiva per visionare la lista delle categorie
-                        dentro abbiamo view list e view grid per i task
+                        dentro abbiamo view list e view grid per i task -->
                     <category-list ng-show="ctrl.noteTask=='Note'" view = "ctrl.view" selected-category="ctrl.selectedCategory" input-search="ctrl.inputSearch" > </category-list>                    
-                    -->
+                    
                     <!-- vista note-->
 
                     <!-- vista list-->
