added: "cerca per" in task view

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
                     <!-- direttiva per visionare la lista delle categorie
                         dentro abbiamo view list e view grid per i task -->
-                    <category-list ng-show="ctrl.noteTask=='Note'" view = "ctrl.view" selected-category="ctrl.selectedCategory" input-search="ctrl.inputSearch" > </category-list>                    
+                    <category-list ng-show="ctrl.noteTask=='Note'" view = "ctrl.view" selected-category="ctrl.selectedCategory" input-search="ctrl.inputSearch"  cerca-per="ctrl.cercaPer"> </category-list>                    
                     
                     <!-- vista note-->
 
