Minor fixed removed console log

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Task App</title>
+    <title>DISNOTE</title>
 
     <!-- Angular Material style sheet -->
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
@@ -44,7 +44,7 @@
                 <div class="md-toolbar-tools">
                      
                     <h2>
-                        <span>App</span>
+                        <span>DISNOTE</span>
                     </h2>
                     <span flex></span>
                         <md-button ng-click="ctrl.toggleNoteTask()" class="md-button" aria-label="Note">
